Fix spacing on idx, listings pages

--- a/auctions/static/auctions/css/styles.css
+++ b/auctions/static/auctions/css/styles.css
@@ -287,7 +287,7 @@ p {
 
 ul {
   padding: 0;
-  margin: 0;
+  margin-bottom: 40px;
 }
 
 /* Font Specific */
@@ -1037,8 +1037,6 @@ input {
 }
 
 .short-listings {
-  position: relative;
-  right: 20px;
   width: 100%;
   text-align: center;
 }
@@ -1068,7 +1066,7 @@ input {
   gap: 10px;
   font-size: 0.8em;
   gap: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
 }
 .sort-by-container p {
   cursor: pointer;
@@ -1296,6 +1294,10 @@ input {
 #active-listings-header,
 #closed-listings-header {
   cursor: pointer;
+}
+
+#closed-listings {
+  margin-top: 40px;
 }
 
 .profile-page-content {
